add complaint button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,9 @@
       <button type="button" (click)="utilityService.linkMe('/hub/signup-mobile'); open = !open">
         <mat-icon>app_registration</mat-icon> Registro
       </button>
+      <button type="button" (click)="popComplaintsDialog(); open = !open">
+        <mat-icon>priority_high</mat-icon> Denuncia
+      </button>
     </div>
   </div>
 
