--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -167,6 +167,16 @@
     border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
     background: #dff1e7;
 
+    .set-2 {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      * {
+        margin: 0;
+      }
+    }
+
     .avatar {
       width: 35px;
       height: 35px;
@@ -190,6 +200,34 @@
   .comlst {
     padding: 15px;
     background: #dff1e7;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+    * {
+      margin: 0;
+    }
+
+    .snglcom {
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+
+    .avatar {
+      width: 35px;
+      height: 35px;
+      border-radius: 100%;
+      overflow: hidden;
+      display: block;
+      background: purple;
+      margin-right: 10px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   .loading {
