--- a/src/app/components/add-document-topic-full/add-document-topic-full.component.html
+++ b/src/app/components/add-document-topic-full/add-document-topic-full.component.html
@@ -5,7 +5,7 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12 dialog-head">
     <div class="set-10">
-      <span>Agregar tópico</span>
+      <span>Agregar problemática</span>
       <input type="file" #file (change)="onFileSelected($event)" accept="image/*" capture="environment" multiple>
     </div>
 
