--- a/src/app/components/floating-sheet/floating-sheet.component.html
+++ b/src/app/components/floating-sheet/floating-sheet.component.html
@@ -17,7 +17,7 @@
   <div class="set-12 btnhldr">
     <button type="button" mat-raised-button color="warn" (click)="popAddTopicDialog()" *ngIf="isCollaborator">
       <mat-icon>note_add</mat-icon>
-      <small>Tópico</small>
+      <small>Problemática</small>
     </button>
   </div>
 
