--- a/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.html
+++ b/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.html
@@ -1,6 +1,6 @@
 <div class="set-12 list-head">
   <div class="set-8">
-    <input type="text" placeholder="Búscar temas..." (input)="applyFilter($event)">
+    <input type="text" placeholder="Buscar temas..." (input)="applyFilter($event)">
   </div>
   <div class="set-4 txt-right">
     <button type="button" mat-mini-fab color="warn" (click)="filterTopicCoverage()">
