--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -202,10 +202,10 @@
         <mat-card class="set-12">
           <div class="set-12 table-head">
             <p class="title">Sub Categorías</p>
-            <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Búscar en sub categorías..."
+            <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar en sub categorías..."
               [disabled]="subcategories.length == 0"> -->
             <mat-form-field appearance="outline">
-              <mat-label>Búscar en sub categorías...</mat-label>
+              <mat-label>Buscar en sub categorías...</mat-label>
               <input
                 matInput
                 type="text"
