--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -170,10 +170,10 @@
         <mat-card class="set-12">
           <div class="set-12 table-head">
             <p class="title">Categorías</p>
-            <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Búscar en categorías..."
+            <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar en categorías..."
               [disabled]="layouts.length == 0"> -->
             <mat-form-field appearance="outline">
-              <mat-label>Búscar en categorías...</mat-label>
+              <mat-label>Buscar en categorías...</mat-label>
               <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="layouts.length == 0" />
               <button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
