--- a/src/app/pando/users-list/users-list.component.html
+++ b/src/app/pando/users-list/users-list.component.html
@@ -6,7 +6,7 @@
   <div class="set-12">
     <div class="set-6">
       <mat-form-field appearance="outline">
-        <mat-label>Búscar usuario...</mat-label>
+        <mat-label>Buscar usuario...</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Ej. Andrea" autocomplete="off">
         <button matSuffix mat-icon-button>
           <mat-icon>groups</mat-icon>
