--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -12,7 +12,7 @@
   <div class="set-12">
     <div class="set-4">
       <mat-form-field appearance="outline">
-        <mat-label>Búscar...</mat-label>
+        <mat-label>Buscar...</mat-label>
         <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled />
         <button type="button" matSuffix>
           <mat-icon>cancel</mat-icon>
@@ -91,13 +91,8 @@
 </div>
 
 <!--Mobile Public-->
-<<<<<<< Updated upstream
-<div *ngIf="isDataAvailable && isMobile && !isPrivate " >
-  <public-testimonials></public-testimonials>
-=======
 <div *ngIf="isDataAvailable && isMobile && !isPrivate ">
-  <public-testimonials>Nes</public-testimonials>
->>>>>>> Stashed changes
+  <public-testimonials></public-testimonials>
 </div>
 
 <!--Mobile Private-->
@@ -105,7 +100,7 @@
   <div class="set-12">
     <div class="set-4">
       <mat-form-field appearance="outline">
-        <mat-label>Búscar...</mat-label>
+        <mat-label>Buscar...</mat-label>
         <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled />
         <button type="button" matSuffix>
           <mat-icon>cancel</mat-icon>
