--- a/src/app/components/add-document-category/add-document-category.component.html
+++ b/src/app/components/add-document-category/add-document-category.component.html
@@ -25,7 +25,7 @@
         <div class="set-12 step-content">
           <div class="set-12">
             <mat-form-field appearance="outline">
-              <mat-label>Búscar categoría</mat-label>
+              <mat-label>Buscar categoría</mat-label>
               <mat-chip-list #chipList>
                 <mat-chip *ngFor="let category of selectedCategories" (removed)="removeCategory(category)">
                   {{category}}
