--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -143,10 +143,10 @@
         <mat-card class="set-12">
           <div class="set-12 table-head">
             <p class="title">Temas</p>
-            <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Búscar en temas..."
+            <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar en temas..."
               [disabled]="topics.length == 0"> -->
             <mat-form-field appearance="outline">
-              <mat-label>Búscar en temas...</mat-label>
+              <mat-label>Buscar en temas...</mat-label>
               <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="topics.length == 0" />
               <button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
