--- a/src/app/documents/single-theme/single-theme.component.html
+++ b/src/app/documents/single-theme/single-theme.component.html
@@ -109,10 +109,10 @@
       <mat-card class="set-12 topic-list">
         <div class="set-12 table-head">
           <p class="title">Soluciones</p>
-          <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Búscar en soluciones..."
+          <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar en soluciones..."
             [disabled]="solutions.length == 0"> -->
           <mat-form-field appearance="outline">
-            <mat-label>Búscar en soluciones...</mat-label>
+            <mat-label>Buscar en soluciones...</mat-label>
             <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="solutions.length == 0">
             <button matSuffix mat-icon-button>
               <mat-icon>search</mat-icon>
