--- a/src/app/posts/components/single-post-dialog/single-post-dialog.component.scss
+++ b/src/app/posts/components/single-post-dialog/single-post-dialog.component.scss
@@ -121,6 +121,10 @@
         overflow: hidden;
         margin-right: 20px;
         border: 1px solid rgba($color: #000000, $alpha: 0.1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 9pt;
 
         img {
           width: 100%;
@@ -143,4 +147,8 @@
       margin-top: 10px;
     }
   }
+}
+
+:host(.fixmobile) {
+  padding: 20px !important;
 }
