--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -5,8 +5,8 @@
 <div class="set-12" *ngIf="isDataAvailable">
   <!-- <div class="set-12 headctrls">
     <mat-form-field appearance="outline">
-      <mat-label>Búscar...</mat-label>
-      <input matInput placeholder="Búscar..." />
+      <mat-label>Buscar...</mat-label>
+      <input matInput placeholder="Buscar..." />
       <button type="button" matSuffix>
         <mat-icon>cancel</mat-icon>
       </button>
@@ -17,7 +17,6 @@
   </div> -->
 
   <div class="crdlst">
-<<<<<<< Updated upstream
     <mat-card *ngFor="let post of posts">
       <!-- testimony -->
       <div class="set-12" *ngIf="post['relation'] == 'testimony'">
@@ -26,23 +25,6 @@
             <button type="button" class="avatar">
               <span *ngIf="post['card']['createdBy'] == null">A</span>
               <span *ngIf="post['card']['createdBy'] != null && post['card']['isAnonymous']">A</span>
-=======
-    <mat-card *ngFor="let card of cards">
-      <div class="set-12 crdh">
-        <button type="button" class="avatar"></button>
-        <div>
-          <p>
-            <small *ngIf="!card['isAnonymous'] && card['createdBy'] != null">
-              {{card['createdBy']['firstname']}} {{card['createdBy']['lastname']}}
-            </small>
-            <small *ngIf="card['isAnonymous']">Anónimo</small>
-          </p>
-          <p class="dates">
-            <small>{{card['createdAt'] | date: 'mediumDate'}} - {{card['createdAt'] | date: 'mediumTime'}}</small>
-          </p>
-        </div>
-      </div>
->>>>>>> Stashed changes
 
               <span
                 *ngIf="post['card']['createdBy'] != null && post['card']['createdBy']['avatarImage'] == null && !post['card']['isAnonymous']">
@@ -88,7 +70,6 @@
           <div class="set-12" [innerHTML]="utilityService.truncateHTML(post['card']['description'])"></div>
         </div>
 
-<<<<<<< Updated upstream
         <div class="set-12 crdvp">
           <img [src]="post['card']['images'][0]" alt="" class="full" *ngIf="post['card']['images'].length != 0" />
           <img src="../../assets/images/mexicolectivo-small-blue.png" alt=""
@@ -98,20 +79,33 @@
         <div class="set-12 crdft">
           <div class="set-6 types">
             <mat-icon>label</mat-icon>
-            <small>Denuncia</small>
+            <small>Testimonio</small>
           </div>
           <div class="set-6 ctrls">
-            <button type="button" matTooltip="Favorito" matTooltipClass="tooltip" [disabled]="user == null">
-              <mat-icon>favorite</mat-icon>
-            </button>
-            <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" [disabled]="user == null"
-              (click)="openSinglePostDialog(post)">
+            <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" (click)="openSinglePostDialog(post)">
               <mat-icon>forum</mat-icon>
             </button>
             <button type="button" matTooltip="Compartir" matTooltipClass="tooltip" (click)="sharePost(post)">
               <mat-icon>share</mat-icon>
             </button>
-            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(post)">
+
+            <button type="button" matTooltip="Favorito" matTooltipClass="tooltip" (click)="handleFavorite(post)"
+              *ngIf="user != null">
+              <mat-icon [color]="post['card']['favorites'] != undefined && 
+              post['card']['favorites']['createdBy'] == user['_id'] ? 'warn' : 'primary'">favorite</mat-icon>
+            </button>
+            <button type="button" matTooltip="Favorito" matTooltipClass="tooltip" (click)="handleFavorite(post)"
+              *ngIf="user == null">
+              <mat-icon>favorite</mat-icon>
+            </button>
+
+            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(post)"
+              *ngIf="user != null">
+              <mat-icon [color]="post['card']['vote'] != undefined && 
+              post['card']['vote']['createdBy'] == user['_id'] ? 'warn' : 'primary'">star</mat-icon>
+            </button>
+            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(post)"
+              *ngIf="user == null">
               <mat-icon>star</mat-icon>
             </button>
           </div>
@@ -182,39 +176,32 @@
             <small>Denuncia</small>
           </div>
           <div class="set-6 ctrls">
-            <button type="button" matTooltip="Favorito" matTooltipClass="tooltip" [disabled]="user == null">
-              <mat-icon>favorite</mat-icon>
-            </button>
-            <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" [disabled]="user == null"
-              (click)="openSinglePostDialog(post)">
+            <button type="button" matTooltip="Comentar" matTooltipClass="tooltip" (click)="openSinglePostDialog(post)">
               <mat-icon>forum</mat-icon>
             </button>
             <button type="button" matTooltip="Compartir" matTooltipClass="tooltip" (click)="sharePost(post)">
               <mat-icon>share</mat-icon>
             </button>
-            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(post)">
+
+            <button type="button" matTooltip="Favorito" matTooltipClass="tooltip" (click)="handleFavorite(post)"
+              *ngIf="user != null">
+              <mat-icon [color]="post['card']['favorites'] != undefined && 
+              post['card']['favorites']['createdBy'] == user['_id'] ? 'warn' : 'primary'">favorite</mat-icon>
+            </button>
+            <button type="button" matTooltip="Favorito" matTooltipClass="tooltip" (click)="handleFavorite(post)"
+              *ngIf="user == null">
+              <mat-icon>favorite</mat-icon>
+            </button>
+
+            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(post)"
+              *ngIf="user != null">
+              <mat-icon [color]="post['card']['vote'] != undefined && 
+              post['card']['vote']['createdBy'] == user['_id'] ? 'warn' : 'primary'">star</mat-icon>
+            </button>
+            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(post)"
+              *ngIf="user == null">
               <mat-icon>star</mat-icon>
             </button>
-=======
-      <div class="set-12 crdcom">
-        <div class="set-2">
-          <button type="button" class="avatar"></button>
-        </div>
-        <div class="set-10">
-          <input type="text" placeholder="Escribe un mensaje..." (keyup)="postComment($event, card)">
-        </div>
-      </div>
-
-      <div class="set-12 comlst" *ngIf="card['comments'].length != 0">
-        <div class="set-12 snglcom" *ngFor="let comment of card.comments">
-          <div class="set-2">
-            <div class="avatar">
-              <img [src]="comment['createdBy']['avatarImage']" alt="">
-            </div>
-          </div>
-          <div class="set-10">
-            <small>{{comment['message']}}</small>
->>>>>>> Stashed changes
           </div>
         </div>
       </div>
