--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -30,7 +30,7 @@
       <div class="set-6">
         <mat-form-field appearance="outline">
           <mat-label>
-            <small>Búscar soluciones...</small>
+            <small>Buscar soluciones...</small>
           </mat-label>
           <input matInput type="text" (keyup)="applyFilterSolution($event)" [disabled]="solutions.length == 0">
           <button matSuffix mat-icon-button>
