--- a/src/app/components/testimony-dialog/testimony-dialog.component.html
+++ b/src/app/components/testimony-dialog/testimony-dialog.component.html
@@ -89,7 +89,7 @@
             </button>
             <button type="button" mat-raised-button color="primary" [disabled]="testimonyFormGroup.invalid || submitted"
               (click)="onFileTestimony(testimonyFormGroup)">
-              <small>Denunciar</small>
+              <small>Guardar</small>
             </button>
             <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
           </div>
