ajustes en posts

--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -40,7 +40,7 @@
       </button>
       <button mat-menu-item (click)="utilitySrvc.linkMe('/posts')">
         <mat-icon>forum</mat-icon>
-        <small>Publicaciones</small>
+        <small>Muro Ciudadano</small>
       </button>
       <button mat-menu-item (click)="popTestimonialsDialog()">
         <mat-icon>edit_note</mat-icon>
