--- a/src/app/posts/components/single-post-dialog/single-post-dialog.component.html
+++ b/src/app/posts/components/single-post-dialog/single-post-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="set-12 dialoghead" mat-dialog-title>
+<!-- <div class="set-12 dialoghead" mat-dialog-title>
   <div class="set-10">
     <p class="title" *ngIf="post?.relation == 'complaint'">{{post['card']['title'] || 'Sin título'}}</p>
     <p class="title" *ngIf="post?.relation == 'testimony'">{{post['card']['name'] || 'Sin título'}}</p>
@@ -72,22 +72,86 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" class="ctrls">
-  <div class="set-9">
-    <form [formGroup]="commentForm" (submit)="onComment(commentForm)">
-      <input type="text" placeholder="Comentar..." formControlName="comment">
-    </form>
+  <form [formGroup]="commentForm" (submit)="onComment(commentForm)" class="set-12">
+    <input type="text" placeholder="Comentar..." formControlName="comment">
+  </form>
+</mat-dialog-actions> -->
+
+<div class="set-12 dialoghead">
+  <div class="set-10">
+    <p class="title" *ngIf="post?.relation == 'complaint'">{{post['card']['title'] || 'Sin título'}}</p>
+    <p class="title" *ngIf="post?.relation == 'testimony'">{{post['card']['name'] || 'Sin título'}}</p>
   </div>
-  <div class="set-3">
-    <button type="button" mat-icon-button (click)="sharePost(post)">
-      <mat-icon>share</mat-icon>
-    </button>
-    <button type="button" mat-icon-button [disabled]="user == null" (click)="handleFavorite(post)">
-      <!-- <mat-icon>favorite</mat-icon> -->
-      <mat-icon [color]="post['card']['favorites'] != undefined ? 'warn' : 'primary'">favorite</mat-icon>
-    </button>
-    <button type="button" mat-icon-button (click)="openVoteDialog(post)">
-      <!-- <mat-icon>star</mat-icon> -->
-      <mat-icon [color]="post['card']['vote'] != undefined ? 'warn' : 'primary'">star</mat-icon>
+
+  <div class="set-2">
+    <button type="button" mat-mini-fab color="primary" (click)="killDialog()">
+      <mat-icon>cancel</mat-icon>
     </button>
   </div>
-</mat-dialog-actions>
+</div>
+
+<div class="set-12 dialogbody">
+  <div class="set-12 dlgcont">
+    <button type="button" class="avatar" *ngIf="post['card']['createdBy'] != null">
+      <img [src]="post['card']['createdBy']['avatarImage']" alt=""
+        *ngIf="post['card']['createdBy']['avatarImage'] != null && !post['card']['isAnonymous']">
+
+      <small *ngIf="post['card']['createdBy']['avatarImage'] == null && !post['card']['isAnonymous']">
+        {{post['card']['createdBy']['firstname'] | firstword | firstletter |
+        titlecase}}{{post['card']['createdBy']['lastname'] | firstword | firstletter | titlecase}}
+      </small>
+
+      <small *ngIf="post['card']['isAnonymous']">A</small>
+    </button>
+
+    <button type="button" class="avatar" *ngIf="post['card']['createdBy'] == null">
+      <small>A</small>
+    </button>
+
+    <div>
+      <p *ngIf="post['card']['createdBy'] != null && !post['card']['isAnonymous']">
+        {{post['card']['createdBy']['firstname'] | titlecase}} {{post['card']['createdBy']['lastname'] | titlecase}}
+      </p>
+
+      <p *ngIf="post['card']['isAnonymous']">Anónimo</p>
+
+      <p *ngIf="post['card']['createdBy'] == null && !post['card']['isAnonymous']">Anónimo</p>
+
+      <p>{{post['card']['createdAt'] | date: 'mediumDate'}} - {{post['card']['createdAt'] | date: 'mediumTime'}}</p>
+    </div>
+  </div>
+
+  <div class="set-12 dlgdesc" [innerHTML]="post['card']['description']"></div>
+
+  <div class="set-12 gallery" *ngIf="post['card']['images'].length != 0">
+    <slider-images [images]="post['card']['images']"></slider-images>
+  </div>
+
+  <div class="set-12 comnts" *ngIf="postComments.length != 0">
+    <div class="set-12 comnt" *ngFor="let comment of postComments">
+      <div class="set-1">
+        <div class="avatar">
+          <img [src]="comment['createdBy']['avatarImage']" alt="" *ngIf="comment['createdBy']['avatarImage'] != null">
+          <span *ngIf="comment['createdBy']['avatarImage'] == null">
+            {{comment['createdBy']['firstname'] | firstword | firstletter}}{{comment['createdBy']['lastname'] |
+            firstword | firstletter}}
+          </span>
+        </div>
+      </div>
+      <div class="set-11 txt">
+        <div class="set-12">
+          <small>{{comment['createdBy']['firstname']}} {{comment['createdBy']['lastname']}}</small>
+        </div>
+        <div class="set-12">
+          <span>{{comment['message']}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="set-12 ctrls">
+  <form [formGroup]="commentForm" (submit)="onComment(commentForm)" class="set-12">
+    <input type="text" placeholder="Comentar..." formControlName="comment">
+  </form>
+</div>
