--- a/src/app/posts/components/single-post-dialog/single-post-dialog.component.scss
+++ b/src/app/posts/components/single-post-dialog/single-post-dialog.component.scss
@@ -1,7 +1,17 @@
 :host {
+  position: relative;
+  height: 100vh;
+  width: -webkit-fill-available;
+
   .dialoghead {
+    width: inherit;
     display: flex;
     align-items: center;
+    padding: 10px 20px;
+    position: fixed;
+    background: #e5e5e5;
+    z-index: 13;
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
 
     * {
       margin: 0;
@@ -29,14 +39,23 @@
     }
   }
 
+  .dialogbody {
+    position: relative;
+    z-index: 11;
+  }
+
   .ctrls {
+    width: inherit;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    border: 1px solid rgba($color: #000000, $alpha: 0.1);
-    border-radius: 50px;
     margin: 0;
-    padding-right: 20px;
+    padding: 20px;
+    border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+    position: fixed;
+    bottom: 0;
+    background: #e5e5e5;
+    z-index: 13;
 
     button {
       zoom: 0.7;
@@ -49,14 +68,16 @@
     input {
       width: 100%;
       padding: 10px 20px;
-
+      border: 1px solid rgba($color: #000000, $alpha: 0.1);
+      border-radius: 50px;
     }
   }
 
   .dlgcont {
-    margin-bottom: 20px;
+    margin: 70px 0 20px 0;
     display: flex;
     align-items: center;
+    padding: 20px;
 
     * {
       margin: 0;
@@ -84,6 +105,10 @@
     }
   }
 
+  .dlgdesc {
+    padding: 0 20px;
+  }
+
   .gallery {
     margin: 20px 0;
 
@@ -101,8 +126,7 @@
   }
 
   .comnts {
-    padding: 10px 0;
-    margin: 10px 0;
+    padding: 20px 20px 110px 20px;
 
     .comnt {
       // display: flex;
@@ -149,6 +173,6 @@
   }
 }
 
-:host(.fixmobile) {
-  padding: 20px !important;
-}
+// :host(.fixmobile) {
+//   padding: 20px !important;
+// }
