--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -1,8 +1,10 @@
 :host {
   width: 100%;
+  height: 100%;
   float: left;
   padding: 40px;
   margin-top: 80px;
+  position: relative;
 
   mat-card:not(:last-child) {
     margin-bottom: 20px;
