testing input file

--- a/src/app/components/testimony-dialog/testimony-dialog.component.html
+++ b/src/app/components/testimony-dialog/testimony-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="set-12 dialog-head">
-  <input type="file" #file (change)="onFileSelected($event)" accept="image/*" capture="environment" multiple>
+  <input type="file" #file (change)="onFileSelected($event)" accept="image/*" capture="user" multiple>
   <div class="set-10">
     <h3>Mi testimonio</h3>
   </div>
