--- a/src/app/posts/single-post/single-post.component.scss
+++ b/src/app/posts/single-post/single-post.component.scss
@@ -4,6 +4,26 @@
   padding: 40px;
   margin-top: 80px;
 
+  .wll {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      zoom: 0.7;
+      margin-right: 10px;
+    }
+
+    span {
+      font-weight: bold;
+      font-size: 13pt;
+    }
+  }
+
   mat-card:not(:last-child) {
     margin-bottom: 20px;
   }
@@ -206,6 +226,11 @@
   margin: 0 !important;
   width: 100%;
   padding: 0 !important;
+
+  .wll {
+    margin: 0 !important;
+    padding: 20px;
+  }
 
   .crdlst {
     width: 100% !important;
