--- a/src/app/components/window-alert/window-alert.component.html
+++ b/src/app/components/window-alert/window-alert.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="set-12">
       <p>Se eliminará la categoría:</p>
-      <h1 class="txt-center">{{layout.category.name}}</h1>
+      <h1 class="txt-center">{{layout.name}}</h1>
       <p>¿Deseas continuar?</p>
     </div>
     <div class="set-12 ctrls">
