--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   float: left;
-  padding: 40px;
+  // padding: 40px;
   margin-top: 80px;
   position: relative;
 
@@ -15,8 +15,9 @@
   }
 
   .crdlst {
-    width: 44%;
-    margin: 0 28%;
+    width: 40%;
+    margin: 0 30%;
+    padding: 40px 0;
   }
 
   .crdh {
@@ -238,6 +239,18 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+  }
+
+  .ldmr {
+    text-align: center;
+    margin-bottom: 40px;
+
+    button {
+      mat-icon {
+        font-size: 10pt;
+        margin-right: 10px;
+      }
     }
   }
 }
