--- a/src/app/posts/posts.component.scss
+++ b/src/app/posts/posts.component.scss
@@ -263,6 +263,7 @@
   .crdlst {
     width: 100% !important;
     margin: 0 !important;
+    padding-top: 0;
 
     mat-card {
       border-radius: 0 !important;
