--- a/src/app/components/testimony-dialog/testimony-dialog.component.html
+++ b/src/app/components/testimony-dialog/testimony-dialog.component.html
@@ -32,9 +32,14 @@
       <mat-icon>place</mat-icon>
       <small>{{locationAvailable ? 'Cancelar ubicación' : 'Usar mi ubiacción'}}</small>
     </button>
+
     <div class="set-12 coords" *ngIf="locationAvailable">
       <p><small>Latitud: <strong>{{location['latitude']}}</strong></small></p>
       <p><small>Longitud: <strong>{{location['longitude']}}</strong></small></p>
+    </div>
+
+    <div class="set-12" *ngIf="isMobile">
+      <small>** Para usar tu ubicación, debes activarla en tus preferencias</small>
     </div>
   </div>
 
