add dialog for user tools in posts

--- a/src/app/components/complaint-dialog/complaint-dialog.component.html
+++ b/src/app/components/complaint-dialog/complaint-dialog.component.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="set-12" *ngIf="isMobile">
-      <small>** Para usar tu ubicación, debes activarla en tus preferencias</small>
+      <small>** Para usar tu ubicación debes activarla en tus preferencias</small>
     </div>
   </div>
 
