add killDialog method to button

--- a/src/app/posts/components/use-tools-dialog/use-tools-dialog.component.html
+++ b/src/app/posts/components/use-tools-dialog/use-tools-dialog.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="set-12">
-    <button type="button" mat-raised-button color="warn">
+    <button type="button" mat-raised-button color="warn" (click)="killDialog()">
       <small>Salir</small>
     </button>
   </div>
